--- a/hub.html
+++ b/hub.html
@@ -17,17 +17,17 @@
     </ul>
   </nav>
 </header>
-    <img style="margin-left: 50px; border: 5px solid #ff7f7f; margin-top: 20px" height="20%" width="20%" src="https://thumbor.arvutitark.ee/UI13IpxeRjOfPLwIcwIo3mcQSbY=/trim/fit-in/800x800/filters:format(webp)/https%3A%2F%2Fstorage.googleapis.com%2Farvutitark-prod%2Fpublic%2Fmedia-hub-olev%2F2022%2F04%2F175111%2Fmedia-chjakk.jpg" alt="">
+    <img class="positioned-image" style="border: 5px solid #ff7f7f; margin-top: 20px" height="45%" width="20%" src="https://thumbor.arvutitark.ee/UI13IpxeRjOfPLwIcwIo3mcQSbY=/trim/fit-in/800x800/filters:format(webp)/https%3A%2F%2Fstorage.googleapis.com%2Farvutitark-prod%2Fpublic%2Fmedia-hub-olev%2F2022%2F04%2F175111%2Fmedia-chjakk.jpg" alt="">
 <div class="container_left">
-    <p style="text-align: center; font-size: 20px">Aukey Hub</p>
-    <p style="text-align: center">Miks tahan?</p>
-    <p style="text-align: center">Siia saab palju juhtmeid ühendada, kõige olulisem on kaks HDMI auku, st saan kahe monitoriga oma läpaka ühendada!</p>
+    <p style="text-align: center; font-size: 20px; color: white">Aukey Hub</p>
+    <p style="text-align: center;">Miks tahan?</p>
+    <p style="text-align: center; color: white; font-size: 13px">Siia saab palju juhtmeid ühendada, kõige olulisem on kaks HDMI auku, st saan kahe monitoriga oma läpaka ühendada!</p>
     <p style="text-decoration: red; text-align: center">Kust saab?</p>
-    <a style=" color: #ff1a1a; text-align: center" href="https://arvutitark.ee/arvutid-ja-lisad/sulearvutite-lisad/pordilaiendiddokid/hub-cb-c78-aluminum-usb-c-12w1-rj45-ethernet-101001000-1128231">
+    <a style="text-align: center; color: white; font-size: 13px" href="https://arvutitark.ee/arvutid-ja-lisad/sulearvutite-lisad/pordilaiendiddokid/hub-cb-c78-aluminum-usb-c-12w1-rj45-ethernet-101001000-1128231">
         <p>Arvutitark.ee</p>
     </a>
     <p style="text-align: center">Palju plekib?</p>
-    <p style="text-align: center">72.05 €</p>
+    <p style="text-align: center; font-size: 13px; color: white">72.05 €</p>
 </div>
 </body>
 </html>
