--- a/kino.html
+++ b/kino.html
@@ -17,17 +17,17 @@
     </ul>
   </nav>
 </header>
-<img style="margin-left: 50px; border: 5px solid #ff7f7f; margin-top: 20px " height="20%" width="20%" src="/pildid/download%20(1).png">
+<img class="positioned-image" style=" border: 5px solid #ff7f7f; margin-top: 20px " height="40%" width="20%" src="/pildid/download%20(1).png">
 <div class="container_left">
-    <p style="text-align: center; font-size: 20px">Kinopiletid</p>
+    <p style="text-align: center; font-size: 20px; color: white">Kinopiletid</p>
     <p style="text-align: center">Miks tahan?</p>
-    <p style="text-align: center">Kinos võib alati käia</p>
+    <p style="text-align: center; color: white; font-size: 13px">Kinos võib alati käia</p>
     <p style="text-align: center">Kust saab?</p>
-    <a style=" color: white" href="https://elektriteater.ee/">
+    <a style=" color: white; font-size: 13px" href="https://elektriteater.ee/">
         <p style="text-align: center">Elektriteater.ee</p>
     </a>
     <p style="text-align: center">Palju plekib?</p>
-    <p style="text-align: center">Oleneb, palju ostad, aga ühe hind äkki 5,50€</p>
+    <p style="text-align: center; color: white; font-size: 13px">Oleneb, palju ostad, aga ühe hind äkki 5,50€</p>
 </div>
 </body>
 </html>
