--- a/müts.html
+++ b/müts.html
@@ -17,17 +17,17 @@
     </ul>
   </nav>
 </header>
-<img style="margin-left: 50px; border: 5px solid #ff7f7f; margin-top: 20px" height="20%" width="20%" src="/pildid/müts.png">
+<img class="positioned-image" style=" border: 5px solid #ff7f7f; margin-top: 20px" height="30%" width="20%" src="/pildid/müts.png">
 <div class="container_left2">
-    <p style="text-align: center; font-size: 20px">Kinopiletid</p>
+    <p style="text-align: center; font-size: 20px; color: white">Nokamüts</p>
     <p style="text-align: center">Miks tahan?</p>
-    <p style="text-align: center">Oma tiimi logoga müts oleks cool</p>
+    <p style="text-align: center; color: white; font-size: 13px">Oma tiimi logoga müts oleks cool</p>
     <p style="text-align: center">Kust saab?</p>
-    <a style=" color: white">
+    <a style=" color: white; font-size: 13px">
         <p style="text-align: center">Maitea issi juures vist saab teha?</p>
     </a>
     <p style="text-align: center">Palju plekib?</p>
-    <p style="text-align: center">Ei teaaeaaa</p>
+    <p style="text-align: center; color: white; font-size: 13px">Ei teaaeaaa</p>
 </div>
 </body>
 </html>
