--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Christmas Wishes</title>
+  <title>Jõulusoovid</title>
   <link rel="stylesheet" href="styles2.css">
 
 </head>
@@ -22,24 +22,18 @@
   <main>
 
 
-<p class="text" style="margin-top: 30px">Loen salmi ette ära:</p>
+<p class="text" style="margin-top: 260px">Loen salmi ette ära:</p>
   <p class="text">Liisal oli vahva aasta</p>
   <p class="text">Sai tööd, sai lulli lasta</p>
   <p class="text">Trenni tehtud, koolis... nojah</p>
   <p class="text">Võibolla see veebi leht</p>
   <p class="text">Näitab natukene arengut</p>
-
+    <a style="color: white" href="https://liisju.github.io/soovid/">
+    <p class="text" style="color:white;">Link eelmise aasta lehele</p>
+</a>
 <br>
 
-
-
-
-}
-
   </main>
-  <footer>
-    <p>&copy; 2023 Christmas Wishes</p>
-  </footer>
-  <script src="scripts.js"></script>
+
 </body>
 </html>
